<resources>
    <string name="app_name">Movies App</string>
    <string name="refresh">Refresh</string>
    <string name="popular">Popular Movies</string>
    <string name="top_rated">Top Rated Movies</string>
    <string name="original_title">Original Title: </string>
    <string name="over_view">Overview: </string>
    <string name="release_date">Release Date: </string>
    <string name="vote_average">Vote Average: </string>
    <string name="trailer">Trailer: </string>
    <string name="trailer_button_text">Watch Trailer</string>
    <string name="favorite_add_button">Add To Favorite</string>
    <string name="favorite_movies">Favorite Movies</string>
    <string name="favorite_delete_button">Delete From Favorite</string>
    <string name="reviews_button">Show Reviews</string>

</resources>
