<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.alkhalilbg.moviesapp.MainActivity">

    <item
        android:id="@+id/refresh"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        android:title="@string/refresh"/>

    <item
        android:id="@+id/popular_menu_item"
        app:showAsAction="never"
        android:title="@string/popular"/>

    <item
        android:id="@+id/top_rated_menu_item"
        app:showAsAction="never"
        android:title="@string/top_rated"/>

    <item
        android:id="@+id/favorite_movies_item"
        app:showAsAction="never"
        android:title="@string/favorite_movies"/>

</menu>